--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,16 @@
 @import "tailwindcss";
-@tailwind utilities;
+@plugin "daisyui";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --bluePrimary: #0A336D;
+  --blueSecondary: #0166B4;
+  --blueTertiary: #3AA9DC;
+  --white: #F5F5F5;
+  --black: #292828;
+  --red: #EB5757;
+  --green: #27AE60;
+  --gray: #BDBDBD;
 }
 
 @theme inline {
